[package]
name = "models"
version = "0.1.0"
authors = ["lukeciatt <luke@whoisclicking.com>"]
edition = "2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.110"
serde_derive = "1.0.110"
async-trait = "0.1.36"
sqlx = { version = "0.3.5", features = [ "postgres" ] }
